<resources>
    <string name="app_name">Know Your Government 1.0</string>
    <string name="copyright">© 2017, Sharul Saxena</string>
    <string name="about_title">Know Your Government</string>
    <string name="version">Version 1.0</string>
    <string name="LS">Location selected</string>
    <string name="location" />
    <string name="Text_Location" />
    <string name="Address">Address :</string>
    <string name="Phone">Phone :</string>
    <string name="Email">Email :</string>
    <string name="Website">Website :</string>
    <string name="no_data_provided1">No data provided</string>
    <string name="no_data_provided2">No data provided</string>
    <string name="no_data_provided3">No data provided</string>
    <string name="no_data_provided4">No data provided</string>
    <string name="textview1">Location</string>
    <string name="textview2">Office</string>
    <string name="textview3">Name</string>
    <string name="textview5">Party</string>
    <string name="no_data_provided01">No data provided</string>
    <string name="no_data_provided02">No data provided</string>
    <string name="no_data_provided04">No data provided</string>
    <string name="no_data_provided05">No data provided</string>
    <string name="textview01">TextView</string>
    <string name="textview02">TextView</string>
    <string name="textview03">TextView</string>
    <string name="textview04">TextView</string>
    <string name="textview11">Location</string>
    <string name="textview12">TextView</string>
    <string name="textview13">TextView</string>
    <string name="textview21">TextView</string>
    <string name="textview22">TextView</string>
    <string name="textview23">TextView</string>
    <string name="textview31">TextView</string>
    <string name="textview32">TextView</string>
    <string name="textview33">TextView</string>
    <string name="location123">location</string>
</resources>
